--- a/mxnet_framework/exps/exp1_simple/config.yml
+++ b/mxnet_framework/exps/exp1_simple/config.yml
@@ -2,21 +2,21 @@ RNG_SEED: 777
 SUBTR_MEANS: False
 COLOR_SPACE: 'rgb'
 NORM_COEFF: 1.0
-PREPARE_SIZE: [66, 30]
-INPUT_SHAPE: [60, 27]
-MAX_LABELS: 6
-MIN_LABELS: 4
+PREPARE_SIZE: [88, 40]
+INPUT_SHAPE: [80, 35]
+MAX_LABELS: 5
+MIN_LABELS: 5
 CLS_NUM: 36 # 10 digits and 26 characters
 GPU_IDS: [0, 1, 2, 3]
 MAX_DEBUG_IMAGES: 50
 PLOT_GRAPH: True
 TRAIN:
   EPOCHS: 512
-  SNAPSHOT_PERIOD: 512
+  SNAPSHOT_PERIOD: 128
   DISPLAY_ITERS: 2
-  BATCH_SIZE: 64
-  # DEBUG_IMAGES: '/home/ubuntu/projects/data/captcha/visualization/exp1_simple_train_debug_10'
-  LOADER_WORKERS: 0
+  BATCH_SIZE: 512
+  # DEBUG_IMAGES: '/home/ubuntu/projects/data/captcha/visualization/exp1_simple_train_debug_16'
+  LOADER_WORKERS: 4
   CSV_PARSER_WORKERS: 0
   DISTORT:
     USE_FLIP: False
@@ -43,20 +43,26 @@ TRAIN:
     USE_GRAYSCALE: True
     GRAYSCALE_PROB: 0.2
     USE_WHITE_BALANCE: True
-    WHITE_BALANCE_PROB: 0.5
+    WHITE_BALANCE_PROB: 0.2
     WHITE_BALANCE_COEFF: 0.02
     USE_INVERT: True
-    INVERT_PROB: 0.5
+    INVERT_PROB: 0.2
     USE_CHANNEL_SHUFFLE: True
-    CHANNEL_SHUFFLE_PROB: 0.5
+    CHANNEL_SHUFFLE_PROB: 0.2
     USE_NOISE: True
     NOISE_PROB: 0.25
     NOISE_SIGMA: 0.05
     USE_LOW_RES: True
     LOW_RES_PROB: 0.1
+    LOW_RES_FACTOR_MIN: 1.2
+    LOW_RES_FACTOR_MAX: 1.8
   DATASETS:
     -
       DB_PATH: '/home/ubuntu/projects/data/captcha/labeled_captchas/'
+      TYPE: 'CSV_FILE'
+      CSV_FILE: 'train.txt'
+    -
+      DB_PATH: '/home/ubuntu/projects/data/captcha/generated_captchas_v2/'
       TYPE: 'CSV_FILE'
       CSV_FILE: 'train.txt'
 VALIDATION:
